# xdp-form-cli-

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  README.md.before_aesthetic_field_fit  README_before_overlap_checks.md  README_before_validation_checks.md  TDD.md  debug_underlines.py  pyproject.toml  render.yaml
.claude/: settings.json
examples/: Page12.xml  Page26.xml  WOEZE_fields_converted_report.csv  WOEZE_fields_from_codefile_report.csv  build_semantic_map.py  detection-patterns.json  make_test_form.py
outputs/: WOEZE_prepared_test_report.csv  ardian_existing_acroform_prepared_test_report.csv
reference/: pdf-fields-normalized.csv
rollback_backups_1409/: README.md  src_xdp_form_cli_acroform_builder.py  src_xdp_form_cli_cli.py  src_xdp_form_cli_field_validation.py  src_xdp_form_cli_pdf_xfa_editor.py  src_xdp_form_cli_xdp_editor.py
src/xdp_form_cli/: acroform_builder.py  acroform_builder.py.before_aesthetic_field_fit  acroform_builder_before_checkbox_appearance.py  acroform_builder_before_page15_table_guard.py  acroform_builder_before_repeated_table_guard.py  auto_form.py  (+35 more)
tests/: test_acroform_builder.py  test_acroform_reader.py  test_auto_form.py  test_azure_report.py  test_detection_patterns.py  test_field_detection.py  test_field_name_resolution.py  test_field_naming.py  test_field_transfer.py  test_field_validation.py  test_job_cleanup.py  test_packaged_semantic_map.py  test_safe_io.py  test_underline_detection.py  test_web_app.py  test_web_app_retention.py  test_xfa_field_injector.py  test_xfa_stripper.py  test_xfa_template_builder.py
(+3 files in other folders)
