[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xdp-form-cli"
version = "0.1.0"
description = "CLI tools for safely copying and editing Adobe XDP/XFA files."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["lxml>=6.0.0", "pikepdf>=10.0.0"]

[project.scripts]
xdp-form-cli = "xdp_form_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
placement = ["Pillow>=10.0.0", "numpy>=1.24.0"]
