[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xdp-form-cli"
version = "0.1.0"
description = "CLI tools for safely copying and editing Adobe XDP/XFA files."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lxml>=6.0.0",
    "pikepdf>=10.0.0",
    "Flask>=3.0.0",
    "gunicorn>=23.0.0",
    "PyMuPDF>=1.24.0",
]

[project.scripts]
xdp-form-cli = "xdp_form_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
xdp_form_cli = ["resources/*.csv", "resources/*.xlsx"]

[project.optional-dependencies]
placement = ["Pillow>=10.0.0", "numpy>=1.24.0"]
azure = ["azure-ai-documentintelligence>=1.0.0", "azure-core>=1.30.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
